@@ -1,5 +1,12 @@
 2025-09-19  Zhengyi Fu  <i@fuzy.me>
 
+	Add package `unfo-fu-session'
+
+	* init.el: Enable `undo-fu-session-global-mode'.
+	* packages.el:
+
+2025-09-19  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/dotemacs-core.el (alist-setq!): Use `named-let'.
 	(project-remove-hook!): Use defun instead of cl-defun.
 
